# darwin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PRD.txt  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  population_ecosystem_model.py  pyproject.toml  pytest.ini  start_darwin.sh
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
.taskmaster/reports/: task-complexity-report.json  task_1_test_report.json  task_2_test_report.json  task_3_test_report.json  task_4_test_report.json  task_7_test_report.json
.zed/: .zshrc.devqai  .zshrc.local  ZED_TERMINAL_SETUP.md  ZED_TERMINAL_STATUS.md  ZED_TERMINAL_VERIFICATION.md  ZOXIDE_USAGE.md  quick-test.sh  settings.json  setup-zed-terminal.sh  start-zed-terminal.sh  test-zed-terminal.sh  verify-zshrc-in-zed.sh  zed-terminal-config.zsh  zed-terminal.sh
darwin/: server.py
docker/: Dockerfile.dev  Dockerfile.prod
docs/: README.md  TASK_11_COMPLETION_SUMMARY.md  dev_report.md  index.md  primer_darwin.md
docs/api/: rest-api.md
docs/developer/: monitoring.md
docs/operations/: deployment.md
docs/tutorials/: README.md
docs/user/: README.md  monitoring.md  quick-start.md
infrastructure/pulumi/: variables.tf
infrastructure/terraform/: main.tf
k8s/: darwin-api-deployment.yaml
scripts/: launch_dashboard.py  tm  validate_task.py
scripts/deployment/: README.md  deploy.sh
src/darwin/: __init__.py
src/darwin/api/: main.py
src/darwin/api/dependencies/: __init__.py  security.py
src/darwin/api/middleware/: __init__.py  logging.py
src/darwin/api/models/: __init__.py  requests.py  responses.py
src/darwin/api/routes/: __init__.py  algorithms.py  auth.py  health.py  metrics.py  optimizers.py  templates.py
src/darwin/core/: config.py  optimizer.py  problem.py
src/darwin/dashboard/: README.md  __init__.py  app.py
src/darwin/dashboard/components/: __init__.py  experiments.py  monitoring.py  problem_editor.py  templates.py  visualizations.py
src/darwin/dashboard/utils/: __init__.py  api_client.py  responsive.py  websocket_manager.py
src/darwin/db/: manager.py
src/darwin/mcp/: __init__.py  client.py  server.py
src/darwin/monitoring/: __init__.py  alerts.py  health.py  logfire_integration.py  metrics.py  performance.py  tracing.py  utils.py
src/darwin/security/: __init__.py  auth.py  exceptions.py  middleware.py  models.py  rbac.py  utils.py
src/darwin/ui/: __init__.py
src/darwin/ui/dashboard/: __init__.py  main.py  templates.py
src/darwin/visualization/: __init__.py  analytics.py  engine.py  export.py  interactive.py  plots.py  plots_3d.py  themes.py
tests/: conftest.py  test_monitoring.py  test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py  test_task_5.py  test_task_5_ui.py  test_task_6_visualization.py  test_task_7.py  test_task_8_security.py
